java 8 and 3.7.0-SNAPSHOT